Fixed the alignment and add video background to the password update p… (#1411)
* Fixed the alignment and add video background to the password update page.

* Updated suitable function name and file name.

--- a/app/assets/stylesheets/views/cameras/add_camera.scss
+++ b/app/assets/stylesheets/views/cameras/add_camera.scss
@@ -16,7 +16,7 @@
   }
 
   span.help-block.form-error {
-    position: relative; 
+    position: relative;
     left: 1px;
   }
 
@@ -377,6 +377,14 @@ input:-webkit-autofill {
   padding: 10px 0 30px;
 }
 
+.padding-bottom-10 {
+  padding-bottom: 10px;
+}
+
+.height-195 {
+  height: 195px;
+}
+
 @media (max-width: 480px) {
 
   .width-400 {
@@ -397,6 +405,10 @@ input:-webkit-autofill {
 
   .padding-left-right-40 {
     padding: 10px;
+  }
+
+  .height-195 {
+    height: 165px;
   }
 
 }
