--- a/app/assets/stylesheets/views/users/password_reset.scss
+++ b/app/assets/stylesheets/views/users/password_reset.scss
@@ -12,7 +12,7 @@
   max-width: 170px;
 }
 #pass-reset .panel {
-  padding: 15px 0px 15px 20px;
+  padding: 15px 15px 15px 20px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   border-radius:2px;
 }
